initial: 1.19.2 yarn mapping