@@ -1,18 +1,11 @@
 /*
  * Decompiled with CFR 0.152.
- * 
- * Could not load the following classes:
- *  com.google.common.collect.ImmutableList
- *  com.google.common.collect.ImmutableSet
  */
 package net.minecraft.resource;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.util.Collection;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
@@ -25,11 +18,11 @@ public interface ResourceManager
 extends ResourceFactory {
     public Set<String> getAllNamespaces();
 
-    public boolean containsResource(Identifier var1);
+    public List<Resource> getAllResources(Identifier var1);
 
-    public List<Resource> getAllResources(Identifier var1) throws IOException;
+    public Map<Identifier, Resource> findResources(String var1, Predicate<Identifier> var2);
 
-    public Collection<Identifier> findResources(String var1, Predicate<String> var2);
+    public Map<Identifier, List<Resource>> findAllResources(String var1, Predicate<Identifier> var2);
 
     public Stream<ResourcePack> streamResourcePacks();
 
@@ -49,27 +42,27 @@ extends ResourceFactory {
 
         @Override
         public Set<String> getAllNamespaces() {
-            return ImmutableSet.of();
+            return Set.of();
         }
 
         @Override
-        public Resource getResource(Identifier identifier) throws IOException {
-            throw new FileNotFoundException(identifier.toString());
-        }
-
-        @Override
-        public boolean containsResource(Identifier id) {
-            return false;
+        public Optional<Resource> getResource(Identifier identifier) {
+            return Optional.empty();
         }
 
         @Override
         public List<Resource> getAllResources(Identifier id) {
-            return ImmutableList.of();
+            return List.of();
         }
 
         @Override
-        public Collection<Identifier> findResources(String startingPath, Predicate<String> pathPredicate) {
-            return ImmutableSet.of();
+        public Map<Identifier, Resource> findResources(String startingPath, Predicate<Identifier> allowedPathPredicate) {
+            return Map.of();
+        }
+
+        @Override
+        public Map<Identifier, List<Resource>> findAllResources(String startingPath, Predicate<Identifier> allowedPathPredicate) {
+            return Map.of();
         }
 
         @Override
